Observer/Observable is deprecated, updated to PropertyChangeSupport and PropertyChangeListener model